<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LikeWaze</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_vehicule_mode">VehiculeModeActivity</string>
    <string name="title_activity_pieton_mode">PietonModeActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_main">Menu</string>
    <string name="menu_poi">Signaler</string>
    <string name="menu_appel">Appels</string>
    <string name="zoom_in">+</string>
    <string name="zoom_out">-</string>
    <string name="zoom_in_description">zoom in</string>
    <string name="zoom_out_description">zoom out</string>
    <string name="quit_description">quitter</string>
    <string name="dialog_poi_title">Signaler</string>
    <string name="dialog_call_title">Appeler</string>
    <string name="dialog_main_title">Menu</string>
    <string name="dialog_main_quit">Quitter</string>
    <string name="dialog_main_switchmode">Changer de mode</string>
    <string name="menu_main_pieton">Menu pour piétons</string>
    <string name="dialog_pieton_title">Signaler</string>
    <string name="menu_pieton_panne">EN PANNE !!!</string>
    <string name="menu_pieton_autostop">Auto-Stop</string>
    <string name="title_activity_direction_auto_stop">DirectionAutoStop</string>
    <string name="msgDirection">Déplacez-vous en direction de votre destination</string>
    <string name="txtBtnDirection">OK</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="add_user"> user sign up form </string>
    <string name="pseudo_text_view">pseudo</string>
    <string name="password_text_view">pass word</string>
    <string name="email_text_view"> email </string>
    <string name="signup_data"> sign up</string>
    <string name="waze_img_desc">waze image</string>
    <string name="del_all_pois"> RESET POI s</string>
    <string name="load_all_pois"> GET POI s</string>
    <string name="title_activity_test_activity">Test_activity</string>

</resources>
